# code-storage-server

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: compression.rs  hash.rs  lib.rs  object.rs
crates/repository/: Cargo.toml
crates/repository/src/: lib.rs
crates/repository/src/api/: mod.rs
crates/repository/src/api/handlers/: mod.rs
crates/repository/src/api/routes/: mod.rs
crates/repository/src/application/: mod.rs
crates/repository/src/application/dto/: mod.rs
crates/repository/src/application/use_cases/: mod.rs
crates/repository/src/domain/: mod.rs
crates/repository/src/domain/entities/: mod.rs
crates/repository/src/domain/ports/: mod.rs
crates/repository/src/domain/services/: mod.rs
crates/repository/src/domain/value_objects/: mod.rs  repository_id.rs  repository_name.rs
crates/repository/src/infrastructure/: mod.rs
crates/repository/src/infrastructure/adapters/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/repository/: mod.rs
crates/server/src/repository/api/: mod.rs
crates/server/src/repository/api/handlers/: mod.rs
crates/server/src/repository/api/routes/: mod.rs
crates/server/src/repository/application/: mod.rs
crates/server/src/repository/application/dto/: mod.rs
crates/server/src/repository/application/use_cases/: mod.rs
crates/server/src/repository/domain/: mod.rs
crates/server/src/repository/domain/entities/: blob.rs  branch.rs  commit.rs  mod.rs  repository.rs  tree.rs
crates/server/src/repository/domain/ports/: blob_storage.rs  commit_repository.rs  mod.rs  repository_repository.rs
crates/server/src/repository/domain/services/: mod.rs
crates/server/src/repository/domain/value_objects/: branch_name.rs  hash.rs  ids.rs  mod.rs  repository_name.rs
crates/server/src/repository/infrastructure/: mod.rs
crates/server/src/repository/infrastructure/adapters/: mod.rs
crates/server/src/user/: mod.rs
crates/server/src/user/api/: mod.rs
crates/server/src/user/api/handlers/: mod.rs
crates/server/src/user/api/routes/: mod.rs
crates/server/src/user/application/: mod.rs
crates/server/src/user/application/dto/: mod.rs
crates/server/src/user/application/use_cases/: mod.rs
crates/server/src/user/domain/: mod.rs
crates/server/src/user/domain/entities/: mod.rs  user.rs
crates/server/src/user/domain/ports/: mod.rs  user_repository.rs
crates/server/src/user/domain/services/: mod.rs
crates/server/src/user/domain/value_objects/: email.rs  mod.rs  user_id.rs  username.rs
crates/server/src/user/infrastructure/: mod.rs
crates/server/src/user/infrastructure/adapters/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  types.rs
crates/shared/src/error/: mod.rs
crates/shared/src/types/: mod.rs
crates/user/: Cargo.toml
crates/user/src/: lib.rs
crates/user/src/api/: mod.rs
crates/user/src/api/handlers/: mod.rs
crates/user/src/api/routes/: mod.rs
crates/user/src/application/: mod.rs
crates/user/src/application/dto/: mod.rs
crates/user/src/application/use_cases/: mod.rs
crates/user/src/domain/: mod.rs
crates/user/src/domain/entities/: mod.rs
crates/user/src/domain/ports/: mod.rs
crates/user/src/domain/services/: mod.rs
crates/user/src/domain/value_objects/: mod.rs
crates/user/src/infrastructure/: mod.rs
crates/user/src/infrastructure/adapters/: mod.rs
docker/: init.sql
docs/architecture/: README.md
docs/cargo/: README.md
docs/implements/: README.md
frontend/: package-lock.json  package.json
