 [workspace]
resolver = "2"

members = [
    "crates/repository",
    "crates/build",
    "crates/user",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Junhyeong9812 <pickjog@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework
axum = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Git
git2 = "0.18"

# Error Handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
