# =============================================================================
# cli 크레이트 Cargo.toml
# =============================================================================
#
# CTS CLI (Command Line Interface)
# - cts init, cts add, cts commit, cts push 등
# - 사용자가 터미널에서 사용하는 명령어
#
# Git CLI와 유사하지만 독립적인 프로토콜 사용
#
# 파일 위치: crates/cli/Cargo.toml
# =============================================================================

[package]
name = "cli"
version.workspace = true    # "0.1.0"
edition.workspace = true    # "2021"

# -----------------------------------------------------------------------------
# 바이너리 설정
# -----------------------------------------------------------------------------
# [[bin]]: 실행 파일 정의 (배열이므로 [[]] 사용)
# 
# name: 실행 파일 이름
# - cargo build 후 target/debug/cts 생성
# - 사용자가 cts init, cts push 등으로 실행
#
# path: 진입점 파일 경로
# - main() 함수가 있는 파일
[[bin]]
name = "cts"                # 실행 파일 이름: cts
path = "src/main.rs"        # 진입점

[dependencies]
# -----------------------------------------------------------------------------
# 내부 크레이트 의존성
# -----------------------------------------------------------------------------
shared = { path = "../shared" }   # 공통 타입, 에러
core = { path = "../core" }       # 해싱, 객체 모델

# -----------------------------------------------------------------------------
# CLI 파싱
# -----------------------------------------------------------------------------
# clap: Command Line Argument Parser
# - derive feature: #[derive(Parser)] 매크로 사용
# - 선언적으로 CLI 인터페이스 정의
# - 자동으로 --help, --version 생성
# - 서브커맨드, 플래그, 옵션 지원
#
# 예시:
#   #[derive(Parser)]
#   struct Cli {
#       #[command(subcommand)]
#       command: Commands,
#   }
clap.workspace = true

# -----------------------------------------------------------------------------
# 비동기 런타임
# -----------------------------------------------------------------------------
# CLI에서도 async 사용 (서버와 HTTP 통신)
# #[tokio::main] 매크로로 main 함수를 async로 만듦
tokio.workspace = true

# -----------------------------------------------------------------------------
# 직렬화
# -----------------------------------------------------------------------------
# 서버와 JSON으로 통신
serde.workspace = true
serde_json.workspace = true

# -----------------------------------------------------------------------------
# 에러 처리
# -----------------------------------------------------------------------------
# anyhow: 애플리케이션용 에러 처리
# - Result<T, anyhow::Error>
# - .context() 로 에러 메시지 추가
# - main()에서 ? 연산자로 에러 출력
anyhow.workspace = true