# =============================================================================
# core 크레이트 Cargo.toml
# =============================================================================
#
# 핵심 로직 크레이트
# - 해싱 (SHA-256)
# - 객체 모델 (Blob, Tree, Commit 포맷)
# - 압축 (zlib/deflate)
#
# Git의 핵심 기능을 독립적으로 구현
# 외부 Git 라이브러리 의존 없음 (git2 사용 안 함!)
#
# 의존하는 크레이트: cli, server
# 의존하는 대상: shared
#
# 파일 위치: crates/core/Cargo.toml
# =============================================================================

[package]
name = "core"
version.workspace = true    # "0.1.0"
edition.workspace = true    # "2021"

[dependencies]
# -----------------------------------------------------------------------------
# 내부 크레이트 의존성
# -----------------------------------------------------------------------------
# path: 로컬 경로로 다른 크레이트 참조
# 워크스페이스 내에서는 상대 경로 사용
shared = { path = "../shared" }

# -----------------------------------------------------------------------------
# 해싱 라이브러리
# -----------------------------------------------------------------------------
# sha1: SHA-1 해시 (160비트, 40자 hex)
# - Git 호환용 (Git은 SHA-1 사용)
# - 보안상 취약점 있으나 데이터 무결성 확인에는 충분
sha1.workspace = true

# sha2: SHA-2 계열 해시
# - SHA-256: 256비트, 64자 hex
# - CTS의 기본 해시 알고리즘
# - SHA-1보다 안전, 현대 표준
sha2.workspace = true

# hex: 바이트 ↔ 16진수 문자열 변환
# - 해시값 표시용
# - [0xa1, 0xb2] → "a1b2"
hex.workspace = true

# -----------------------------------------------------------------------------
# 압축 라이브러리
# -----------------------------------------------------------------------------
# flate2: zlib/deflate 압축 알고리즘
# - Git과 동일한 압축 방식
# - Blob 저장 시 용량 절약
# - 압축률 좋고 빠름
flate2.workspace = true

# -----------------------------------------------------------------------------
# 직렬화
# -----------------------------------------------------------------------------
# 객체 직렬화에 사용
serde.workspace = true

# -----------------------------------------------------------------------------
# 에러 처리
# -----------------------------------------------------------------------------
thiserror.workspace = true