# ============================================
# repository 크레이트 Cargo.toml
# ============================================
# Repository 도메인 (Bounded Context)
# Git 저장소 생성, 관리, 코드 브라우징 담당

[package]
name = "repository"            # 크레이트 이름
version.workspace = true       # 워크스페이스 버전 상속
edition.workspace = true       # 워크스페이스 에디션 상속
license.workspace = true       # 워크스페이스 라이선스 상속

# ============================================
# 의존성
# ============================================

[dependencies]
# --------------------------------------------
# 내부 크레이트 의존성
# --------------------------------------------
# path: 로컬 경로로 다른 크레이트 참조
# 워크스페이스 내 크레이트 간 의존성
shared = { path = "../shared" }

# --------------------------------------------
# 외부 의존성 (워크스페이스에서 버전 상속)
# --------------------------------------------
tokio.workspace = true         # 비동기 런타임 (async fn, .await)
axum.workspace = true          # 웹 프레임워크 (Router, Handler)
serde.workspace = true         # 직렬화/역직렬화
serde_json.workspace = true    # JSON 처리
git2.workspace = true          # Git 작업 (이 크레이트의 핵심!)
sqlx.workspace = true          # 데이터베이스 (저장소 메타데이터 저장)
thiserror.workspace = true     # 에러 타입 정의
anyhow.workspace = true        # 에러 처리
tracing.workspace = true       # 로깅
uuid.workspace = true          # 저장소 ID 생성
chrono.workspace = true        # 생성일시, 수정일시
