# =============================================================================
# server 크레이트 Cargo.toml
# =============================================================================
#
# CTS Server (API 서버)
# - REST API 제공
# - CLI와 통신
# - DB, 파일 스토리지 관리
#
# 아키텍처: DDD + Hexagonal + Layered
# 도메인: repository, user, build
#
# 파일 위치: crates/server/Cargo.toml
# =============================================================================

[package]
name = "server"
version.workspace = true    # "0.1.0"
edition.workspace = true    # "2021"

# -----------------------------------------------------------------------------
# 바이너리 설정
# -----------------------------------------------------------------------------
# 서버 실행 파일
# cargo run -p server 또는 cargo run --bin cts-server
[[bin]]
name = "cts-server"         # 실행 파일 이름
path = "src/main.rs"        # 진입점

[dependencies]
# -----------------------------------------------------------------------------
# 내부 크레이트 의존성
# -----------------------------------------------------------------------------
shared = { path = "../shared" }   # 공통 타입, 에러
core = { path = "../core" }       # 해싱, 객체 모델

# -----------------------------------------------------------------------------
# 비동기 런타임
# -----------------------------------------------------------------------------
# 서버는 비동기 필수
# - 많은 동시 연결 처리
# - I/O 대기 시간 동안 다른 작업 처리
tokio.workspace = true

# -----------------------------------------------------------------------------
# 웹 프레임워크
# -----------------------------------------------------------------------------
# axum: 현대적인 Rust 웹 프레임워크
# - Tokio 팀 개발
# - 타입 안전한 라우팅
# - tower 기반 미들웨어
# - 매크로 최소화, 함수형 스타일
axum.workspace = true

# tower-http: HTTP 미들웨어
# - CORS (Cross-Origin Resource Sharing)
# - 요청/응답 로깅
tower-http.workspace = true

# -----------------------------------------------------------------------------
# 데이터베이스
# -----------------------------------------------------------------------------
# sqlx: 비동기 SQL 라이브러리
# - 컴파일 타임 SQL 검증 (선택적)
# - PostgreSQL 네이티브 지원
# - 연결 풀 내장
sqlx.workspace = true

# -----------------------------------------------------------------------------
# 직렬화
# -----------------------------------------------------------------------------
# API 요청/응답 JSON 처리
serde.workspace = true
serde_json.workspace = true

# -----------------------------------------------------------------------------
# 로깅
# -----------------------------------------------------------------------------
# 서버 로그 기록
# RUST_LOG=debug 환경변수로 레벨 설정
tracing.workspace = true
tracing-subscriber.workspace = true

# -----------------------------------------------------------------------------
# 유틸리티
# -----------------------------------------------------------------------------
uuid.workspace = true           # 엔티티 ID
chrono.workspace = true         # 날짜/시간
async-trait.workspace = true    # 비동기 trait (포트 정의)
dotenvy.workspace = true        # .env 파일 로드

# -----------------------------------------------------------------------------
# 에러 처리
# -----------------------------------------------------------------------------
anyhow.workspace = true
thiserror.workspace = true